[package]
name = "rs-minecraft-exporter"
version = "0.1.0"
authors = ["Marvin Altemeier <marvin.altemeier@hetzner-cloud.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "0.8"
serde_json = "1.0.50"
serde = { version = "1.0.50", features = ["derive"] }
log = "0.4.8"
simple_logger = "1.6.0"
hematite-nbt = "0.4.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4.0"
hyper = "0.13.4"
