[package]
name = "rs-minecraft-exporter"
version = "1.1.1"
authors = ["Marvin Altemeier <marv.internetz@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Prometheus exporter for minecraft version 1.15.2+"
homepage = "https://github.com/iMarv/rs-minecraft-exporter"
repository = "https://github.com/iMarv/rs-minecraft-exporter"
readme = "README.md"
keywords = ["minecraft", "prometheus", "exporter", "nbt", "stats"]
categories = ["command-line-utilities", "data-structures", "web-programming::http-server", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = { version = "0.8", features = ["process"] }
serde_json = "1.0.50"
serde = { version = "1.0.50", features = ["derive"] }
log = "0.4.8"
simple_logger = "1.6.0"
hematite-nbt = "0.4.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4.0"
hyper = "0.13.4"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
